style changes to pictures

--- a/Index.html
+++ b/Index.html
@@ -16,27 +16,19 @@
         <p>
             Family Pictures
         </p>
-        <table align='center'>
-            <tr>
-                <td><img class="thumbnail" src="images/wedding.jpg"></td>
-                <td><img class="thumbnail" src="images/honeymoon.jpg"></td>
-                <td><img class="thumbnail" src="images/puppers.jpg"></td>
-            </tr>
-            <tr>
-                <td class="description">One of my favorite photos from our wedding</td>
-                <td class="description">My wife and I on our honeymoon in Arizona</td>
-                <td class="description">Our dogs Kyra (top) and Shep (bottom)</td>
-            </tr>
-            <tr>
-                <td><img class="thumbnail" src="images/malcolm-dinosaur.jpg"></td>
-                <td><img class="thumbnail" src="images/family-easter.jpg"></td>
-                <td><img class="thumbnail" src="images/malcolm-shep-3.jpg"></td>
-            </tr>
-            <tr>
-                <td class="description">My son around 6 months old</td>
-                <td class="description">Malcolm at his first Easter egg hunt</td>
-                <td class="description">Malcolm watching cartoons with his favorite dog</td>
-            </tr>
-        </table>
+        <div class="container">
+          <div><img class="thumbnail" src="images/wedding.jpg"></div>
+          <div><img class="thumbnail" src="images/honeymoon.jpg"></div>
+          <div><img class="thumbnail" src="images/puppers.jpg"></div>
+          <div class="description">One of my favorite photos from our wedding</div>
+          <div class="description">My wife and I on our honeymoon in Arizona</div>
+          <div class="description">Our dogs Kyra (top) and Shep (bottom)</div>
+          <div><img class="thumbnail" src="images/malcolm-dinosaur.jpg"></div>
+          <div><img class="thumbnail" src="images/family-easter.jpg"></div>
+          <div><img class="thumbnail" src="images/malcolm-shep-3.jpg"></div>
+          <div class="description">My son around 6 months old</div>
+          <div class="description">Malcolm at his first Easter egg hunt</div>
+          <div class="description">Malcolm watching cartoons with his favorite dog</div>
+        </div>
     </body>
 </HTML>
